// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chapter Show chapter 1`] = `
<div>
  <header
    class="Header"
  >
    <nav
      class="navbar navbar-expand-md navbar-light"
    >
      <div
        class="container"
      >
        <span
          class="navbar-brand"
        >
          <a
            href="https://www.lmu.de"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              class="Header__corporate-logo img-fluid"
              src="LMU_Logo.svg"
            />
          </a>
        </span>
        <a
          class="active navbar-brand"
          href="/"
          title="electronic Babylonian Literature (eBL)"
        >
          <h1
            class="Header__title"
          >
            <span
              class="Header__title-main"
            >
              electronic
              <br />
              Babylonian
              <br />
              Literature
            </span>
            <small
              class="Header__title-abbreviation"
            >
              eBL
            </small>
          </h1>
        </a>
        <div
          class="navbar-collapse collapse"
          id="Header-5"
        >
          <div
            class="mx-auto navbar-nav"
          >
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rb-event-key="/signs"
                href="/signs"
              >
                Signs
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rb-event-key="/dictionary"
                href="/dictionary"
              >
                Dictionary
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="active nav-link"
                data-rb-event-key="/corpus"
                href="/corpus"
              >
                Corpus
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rb-event-key="/fragmentarium"
                href="/fragmentarium"
              >
                Fragmentarium
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rb-event-key="/bibliography"
                href="/bibliography"
              >
                Bibliography
              </a>
            </div>
          </div>
          <span
            class="navbar-text"
          >
            <button
              class="btn btn-outline-secondary btn-sm"
              type="button"
            >
              Logout 
              Test
            </button>
          </span>
        </div>
        <button
          aria-controls="Header-5"
          aria-label="Toggle navigation"
          class="navbar-toggler collapsed"
          type="button"
        >
          <span
            class="navbar-toggler-icon"
          />
        </button>
      </div>
    </nav>
  </header>
  <section
    class="App-content"
  >
    <header
      class="App-content__header"
    >
      <nav
        aria-label="breadcrumb"
      >
        <ol
          class="breadcrumb"
        >
          <li
            class="breadcrumb-item active"
          >
            <a
              href="/"
            >
              eBL
            </a>
          </li>
          <li
            class="breadcrumb-item active"
          >
            <a
              href="/corpus"
            >
              Corpus
            </a>
          </li>
          <li
            aria-current="page"
            class="breadcrumb-item active"
          >
            I.1 Palm and Vine
          </li>
        </ol>
      </nav>
      <div
        class="float-right btn-toolbar"
        role="toolbar"
      />
      <h2>
        I.1 Palm and Vine
      </h2>
    </header>
    <section
      class="text-view__section"
    >
      <h3
        class="text-view__section-heading"
      >
        Introduction
      </h3>
      <div
        class="text-view__markdown"
      >
        <p>
          This is a 
          <em>
            test text
          </em>
          .
        </p>
      </div>
    </section>
    <section
      class="text-view__section"
    >
      <h3
        aria-controls="collapse-9"
        class="text-view__section-heading text-view__section-heading--collapse"
      >
        Chapters
         
        <i
          aria-expanded="true"
          class="text-view__collapse-indicator fas fa-caret-down"
        />
      </h3>
      <div
        class="collapse show"
        id="collapse-9"
        style=""
      >
        <section>
          <h4>
            <a
              href="/corpus/L/1/1/Old Babylonian/The Only Chapter"
            >
              The Only Chapter
               
              <span />
            </a>
          </h4>
          <section
            class="text-view__section"
          >
            <h5
              aria-controls="collapse-10"
              class="text-view__section-heading text-view__section-heading--collapse"
            >
              List of Manuscripts
               
              <i
                aria-expanded="false"
                class="text-view__collapse-indicator fas fa-caret-right"
              />
            </h5>
          </section>
        </section>
      </div>
    </section>
    <section
      class="text-view__section"
    >
      <h3
        aria-controls="collapse-7"
        class="text-view__section-heading text-view__section-heading--collapse"
      >
        Colophons
         
        <i
          aria-expanded="false"
          class="text-view__collapse-indicator fas fa-caret-right"
        />
      </h3>
    </section>
    <section
      class="text-view__section"
    >
      <h3
        aria-controls="collapse-8"
        class="text-view__section-heading text-view__section-heading--collapse"
      >
        Unplaced Lines
         
        <i
          aria-expanded="false"
          class="text-view__collapse-indicator fas fa-caret-right"
        />
      </h3>
    </section>
  </section>
</div>
`;

exports[`Chapter Show list of manuscripts 1`] = `
<div>
  <header
    class="Header"
  >
    <nav
      class="navbar navbar-expand-md navbar-light"
    >
      <div
        class="container"
      >
        <span
          class="navbar-brand"
        >
          <a
            href="https://www.lmu.de"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              class="Header__corporate-logo img-fluid"
              src="LMU_Logo.svg"
            />
          </a>
        </span>
        <a
          class="active navbar-brand"
          href="/"
          title="electronic Babylonian Literature (eBL)"
        >
          <h1
            class="Header__title"
          >
            <span
              class="Header__title-main"
            >
              electronic
              <br />
              Babylonian
              <br />
              Literature
            </span>
            <small
              class="Header__title-abbreviation"
            >
              eBL
            </small>
          </h1>
        </a>
        <div
          class="navbar-collapse collapse"
          id="Header-11"
        >
          <div
            class="mx-auto navbar-nav"
          >
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rb-event-key="/signs"
                href="/signs"
              >
                Signs
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rb-event-key="/dictionary"
                href="/dictionary"
              >
                Dictionary
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="active nav-link"
                data-rb-event-key="/corpus"
                href="/corpus"
              >
                Corpus
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rb-event-key="/fragmentarium"
                href="/fragmentarium"
              >
                Fragmentarium
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rb-event-key="/bibliography"
                href="/bibliography"
              >
                Bibliography
              </a>
            </div>
          </div>
          <span
            class="navbar-text"
          >
            <button
              class="btn btn-outline-secondary btn-sm"
              type="button"
            >
              Logout 
              Test
            </button>
          </span>
        </div>
        <button
          aria-controls="Header-11"
          aria-label="Toggle navigation"
          class="navbar-toggler collapsed"
          type="button"
        >
          <span
            class="navbar-toggler-icon"
          />
        </button>
      </div>
    </nav>
  </header>
  <section
    class="App-content"
  >
    <header
      class="App-content__header"
    >
      <nav
        aria-label="breadcrumb"
      >
        <ol
          class="breadcrumb"
        >
          <li
            class="breadcrumb-item active"
          >
            <a
              href="/"
            >
              eBL
            </a>
          </li>
          <li
            class="breadcrumb-item active"
          >
            <a
              href="/corpus"
            >
              Corpus
            </a>
          </li>
          <li
            aria-current="page"
            class="breadcrumb-item active"
          >
            I.1 Palm and Vine
          </li>
        </ol>
      </nav>
      <div
        class="float-right btn-toolbar"
        role="toolbar"
      />
      <h2>
        I.1 Palm and Vine
      </h2>
    </header>
    <section
      class="text-view__section"
    >
      <h3
        class="text-view__section-heading"
      >
        Introduction
      </h3>
      <div
        class="text-view__markdown"
      >
        <p>
          This is a 
          <em>
            test text
          </em>
          .
        </p>
      </div>
    </section>
    <section
      class="text-view__section"
    >
      <h3
        aria-controls="collapse-15"
        class="text-view__section-heading text-view__section-heading--collapse"
      >
        Chapters
         
        <i
          aria-expanded="true"
          class="text-view__collapse-indicator fas fa-caret-down"
        />
      </h3>
      <div
        class="collapse show"
        id="collapse-15"
        style=""
      >
        <section>
          <h4>
            <a
              href="/corpus/L/1/1/Old Babylonian/The Only Chapter"
            >
              The Only Chapter
               
              <span />
            </a>
          </h4>
          <section
            class="text-view__section"
          >
            <h5
              aria-controls="collapse-17"
              class="text-view__section-heading text-view__section-heading--collapse"
            >
              List of Manuscripts
               
              <i
                aria-expanded="true"
                class="text-view__collapse-indicator fas fa-caret-down"
              />
            </h5>
            <div
              class="collapse show"
              id="collapse-17"
              style=""
            >
              <table>
                <colgroup
                  span="2"
                />
                <tr
                  class="list-of-manuscripts__header"
                >
                  <th
                    class="list-of-manuscripts__column-heading"
                    id="siglum-18"
                    scope="col"
                  >
                    Siglum
                  </th>
                  <th
                    class="list-of-manuscripts__column-heading"
                    id="musuemumber-19"
                    scope="col"
                  >
                    Museum Number
                    <span
                      class="references-help"
                    >
                      <i
                        class="fas fa-info-circle"
                      />
                    </span>
                  </th>
                </tr>
                <tr>
                  <th
                    class="list-of-manuscripts__provenance-heading list-of-manuscripts__provenance-heading--first"
                    colspan="2"
                    id="provenace-20"
                    scope="colgroup"
                  >
                    Assyria
                  </th>
                </tr>
                <tr>
                  <th
                    class="list-of-manuscripts__siglum-heading"
                    headers="provenace-20 siglum-18"
                    id="row-21"
                    scope="row"
                  >
                    AssaOBSch1
                  </th>
                  <td
                    headers="provenace-20 row-21 musuemumber-19"
                  >
                    BM.X
                    <ul
                      class="list-of-manuscripts__references"
                    >
                      <li>
                        <span
                          class="reference-popover__citation"
                        >
                          , : 5168708265705472-3418873684557824 
                          [
                          l. 1., 3'.
                          ]
                           (C)
                        </span>
                      </li>
                    </ul>
                  </td>
                </tr>
              </table>
            </div>
          </section>
        </section>
      </div>
    </section>
    <section
      class="text-view__section"
    >
      <h3
        aria-controls="collapse-13"
        class="text-view__section-heading text-view__section-heading--collapse"
      >
        Colophons
         
        <i
          aria-expanded="false"
          class="text-view__collapse-indicator fas fa-caret-right"
        />
      </h3>
    </section>
    <section
      class="text-view__section"
    >
      <h3
        aria-controls="collapse-14"
        class="text-view__section-heading text-view__section-heading--collapse"
      >
        Unplaced Lines
         
        <i
          aria-expanded="false"
          class="text-view__collapse-indicator fas fa-caret-right"
        />
      </h3>
    </section>
  </section>
</div>
`;

exports[`With session 1`] = `
<div>
  <header
    class="Header"
  >
    <nav
      class="navbar navbar-expand-md navbar-light"
    >
      <div
        class="container"
      >
        <span
          class="navbar-brand"
        >
          <a
            href="https://www.lmu.de"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              class="Header__corporate-logo img-fluid"
              src="LMU_Logo.svg"
            />
          </a>
        </span>
        <a
          class="active navbar-brand"
          href="/"
          title="electronic Babylonian Literature (eBL)"
        >
          <h1
            class="Header__title"
          >
            <span
              class="Header__title-main"
            >
              electronic
              <br />
              Babylonian
              <br />
              Literature
            </span>
            <small
              class="Header__title-abbreviation"
            >
              eBL
            </small>
          </h1>
        </a>
        <div
          class="navbar-collapse collapse"
          id="Header-1"
        >
          <div
            class="mx-auto navbar-nav"
          >
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rb-event-key="/signs"
                href="/signs"
              >
                Signs
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rb-event-key="/dictionary"
                href="/dictionary"
              >
                Dictionary
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="active nav-link"
                data-rb-event-key="/corpus"
                href="/corpus"
              >
                Corpus
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rb-event-key="/fragmentarium"
                href="/fragmentarium"
              >
                Fragmentarium
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rb-event-key="/bibliography"
                href="/bibliography"
              >
                Bibliography
              </a>
            </div>
          </div>
          <span
            class="navbar-text"
          >
            <button
              class="btn btn-outline-secondary btn-sm"
              type="button"
            >
              Logout 
              Test
            </button>
          </span>
        </div>
        <button
          aria-controls="Header-1"
          aria-label="Toggle navigation"
          class="navbar-toggler collapsed"
          type="button"
        >
          <span
            class="navbar-toggler-icon"
          />
        </button>
      </div>
    </nav>
  </header>
  <section
    class="App-content"
  >
    <header
      class="App-content__header"
    >
      <nav
        aria-label="breadcrumb"
      >
        <ol
          class="breadcrumb"
        >
          <li
            class="breadcrumb-item active"
          >
            <a
              href="/"
            >
              eBL
            </a>
          </li>
          <li
            class="breadcrumb-item active"
          >
            <a
              href="/corpus"
            >
              Corpus
            </a>
          </li>
          <li
            aria-current="page"
            class="breadcrumb-item active"
          >
            I.1 Palm and Vine
          </li>
        </ol>
      </nav>
      <div
        class="float-right btn-toolbar"
        role="toolbar"
      />
      <h2>
        I.1 Palm and Vine
      </h2>
    </header>
    <section
      class="text-view__section"
    >
      <h3
        class="text-view__section-heading"
      >
        Introduction
      </h3>
      <div
        class="text-view__markdown"
      >
        <p>
          This is a 
          <em>
            test text
          </em>
          .
        </p>
      </div>
    </section>
    <section
      class="text-view__section"
    >
      <h3
        aria-controls="collapse-2"
        class="text-view__section-heading text-view__section-heading--collapse"
      >
        Chapters
         
        <i
          aria-expanded="false"
          class="text-view__collapse-indicator fas fa-caret-right"
        />
      </h3>
    </section>
    <section
      class="text-view__section"
    >
      <h3
        aria-controls="collapse-3"
        class="text-view__section-heading text-view__section-heading--collapse"
      >
        Colophons
         
        <i
          aria-expanded="false"
          class="text-view__collapse-indicator fas fa-caret-right"
        />
      </h3>
    </section>
    <section
      class="text-view__section"
    >
      <h3
        aria-controls="collapse-4"
        class="text-view__section-heading text-view__section-heading--collapse"
      >
        Unplaced Lines
         
        <i
          aria-expanded="false"
          class="text-view__collapse-indicator fas fa-caret-right"
        />
      </h3>
    </section>
  </section>
</div>
`;

exports[`Without session 1`] = `
<div>
  <header
    class="Header"
  >
    <nav
      class="navbar navbar-expand-md navbar-light"
    >
      <div
        class="container"
      >
        <span
          class="navbar-brand"
        >
          <a
            href="https://www.lmu.de"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              class="Header__corporate-logo img-fluid"
              src="LMU_Logo.svg"
            />
          </a>
        </span>
        <a
          class="active navbar-brand"
          href="/"
          title="electronic Babylonian Literature (eBL)"
        >
          <h1
            class="Header__title"
          >
            <span
              class="Header__title-main"
            >
              electronic
              <br />
              Babylonian
              <br />
              Literature
            </span>
            <small
              class="Header__title-abbreviation"
            >
              eBL
            </small>
          </h1>
        </a>
        <div
          class="navbar-collapse collapse"
          id="Header-24"
        >
          <div
            class="mx-auto navbar-nav"
          >
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rb-event-key="/signs"
                href="/signs"
              >
                Signs
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rb-event-key="/dictionary"
                href="/dictionary"
              >
                Dictionary
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="active nav-link"
                data-rb-event-key="/corpus"
                href="/corpus"
              >
                Corpus
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rb-event-key="/fragmentarium"
                href="/fragmentarium"
              >
                Fragmentarium
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rb-event-key="/bibliography"
                href="/bibliography"
              >
                Bibliography
              </a>
            </div>
          </div>
          <span
            class="navbar-text"
          >
            <button
              class="btn btn-outline-secondary btn-sm"
              type="button"
            >
              Login
            </button>
          </span>
        </div>
        <button
          aria-controls="Header-24"
          aria-label="Toggle navigation"
          class="navbar-toggler collapsed"
          type="button"
        >
          <span
            class="navbar-toggler-icon"
          />
        </button>
      </div>
    </nav>
  </header>
  <section
    class="App-content"
  >
    <header
      class="App-content__header"
    >
      <nav
        aria-label="breadcrumb"
      >
        <ol
          class="breadcrumb"
        >
          <li
            class="breadcrumb-item active"
          >
            <a
              href="/"
            >
              eBL
            </a>
          </li>
          <li
            class="breadcrumb-item active"
          >
            <a
              href="/corpus"
            >
              Corpus
            </a>
          </li>
          <li
            aria-current="page"
            class="breadcrumb-item active"
          >
            I.1 Palm and Vine
          </li>
        </ol>
      </nav>
      <div
        class="float-right btn-toolbar"
        role="toolbar"
      />
      <h2>
        I.1 Palm and Vine
      </h2>
    </header>
    <p>
      Please log in to view the text.
    </p>
  </section>
</div>
`;
